--- a/frontend/src/app/containers/login/login.component.html
+++ b/frontend/src/app/containers/login/login.component.html
@@ -6,29 +6,41 @@
           <div class="card-group">
             <div class="card p-4">
               <div class="card-body">
-                <form>
-                  <h1>Ingresar</h1>
+                <div class="row">
+                  <div class="col-12 text-center">
+                    <img src="/assets/img/brand/logogie2.svg" alt="Logo" width="80" >
+                  </div>
+                </div>
+                <form class="mt-2" (submit)="OnLogin(loginForm)" #loginForm="ngForm">
+                  <h1 class="text-center">Monitoreo IoT</h1>
                   <p class="text-muted">Inicie sesión en su cuenta</p>
                   <div class="input-group mb-3">
                     <div class="input-group-prepend">
                       <span class="input-group-text"><i class="icon-user"></i></span>
                     </div>
-                    <input type="text" class="form-control" placeholder="Usuario" autocomplete="username" required>
+                    <input type="text" class="form-control" name="username" ngModel placeholder="Usuario" autocomplete="username" [ngClass]="{'is-invalid': usernameEmpty }">
                   </div>
+                  <div *ngIf="usernameEmpty" class="text-danger mt-n3 mb-3">Nombre de usuario requerido.</div>
                   <div class="input-group mb-4">
                     <div class="input-group-prepend">
                       <span class="input-group-text"><i class="icon-lock"></i></span>
                     </div>
-                    <input type="password" class="form-control" placeholder="Contraseña" autocomplete="current-password" required>
+                    <input type="password" class="form-control" name="password" ngModel placeholder="Contraseña" autocomplete="current-password" [ngClass]="{'is-invalid': passwordEmpty }">
                   </div>
-                  <div class="row">
-                    <div class="col-6">
-                      <button type="button" class="btn btn-primary px-4">Aceptar</button>
+                  <div *ngIf="passwordEmpty" class="text-danger mt-n4 mb-3">Contraseña requerida.</div>
+                  <div *ngIf="loginError" class="text-danger mt-n2 mb-3">Usuario y/o contraseña incorrectos.</div>
+                  <div class="row justify-content-center">
+                    <div class="col-6 row justify-content-center">
+                      <button type="submit" class="btn btn-primary">
+                        <span class="spinner-border spinner-border-sm" role="status" aria-hidden="true" *ngIf="isLoading"></span>
+                        Aceptar
+                      </button>
                     </div>
                   </div>
-                  <div class="row mt-5">
-                    <div class="col-12 text-right">
-                      <button type="button" class="btn btn-link px-0">Olvido su contraseña ?</button>
+                  <div class="row justify-content-left">
+                    <div class="col">
+                      <p class="text-muted mt-3">Usuarios: super, administrator, user, guest</p>
+                      <p class="text-muted mt-n3 mb-n3">Contraseña: GieGie20</p>
                     </div>
                   </div>
                 </form>
@@ -37,6 +49,13 @@
           </div>
         </div>
       </div>
+      <div class="row">
+        <div class="col-md-4 mx-auto text-right">
+          <button type="button" class="btn btn-link px-0">Olvido su contraseña ?</button>
+        </div>
+      </div>
     </div>
   </main>
 </div>
+
+
