--- a/frontend/src/app/views/dashboard/dashboard.component.html
+++ b/frontend/src/app/views/dashboard/dashboard.component.html
@@ -1,6 +1,11 @@
 <div class="animated fadeIn">
   <div class="row">
     <div class="col-sm-6 col-lg-3">
+      <button type="button" class="btn btn-block btn-primary mb-3" (click)="getUsers($event)">Test Api</button>
+    </div>
+  </div>
+  <div class="row">
+    <div class="col-sm-6 col-lg-3">
       <div class="card text-white bg-info">
         <div class="card-body pb-0">
           <button type="button" class="btn btn-transparent p-0 float-right">
