--- a/frontend/src/app/containers/default-layout/default-layout.component.html
+++ b/frontend/src/app/containers/default-layout/default-layout.component.html
@@ -12,7 +12,7 @@
   <ul class="nav navbar-nav ml-auto">
     <li class="nav-item dropdown" dropdown placement="bottom right">
       <a class="nav-link" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false" dropdownToggle (click)="false">
-        <span class="navbar-text">Usuario</span>
+        <span class="navbar-text">{{username}}</span>
         <img src="assets/img/brand/user.png" class="img-avatar" alt="Usuario"/>
       </a>
       <div class="dropdown-menu dropdown-menu-right" *dropdownMenu aria-labelledby="simple-dropdown">
