--- a/frontend/src/app/containers/default-layout/project-selection.component.html
+++ b/frontend/src/app/containers/default-layout/project-selection.component.html
@@ -1,6 +1,9 @@
 <div class="btn-group w-100" dropdown >
   <button style="height: 45px" dropdownToggle type="button" class="btn btn-secondary dropdown-toggle btn-block btn-square text-left">
-    <i class="icon-briefcase ml-2 mr-3"></i> {{ projectSelected?.Name || "Proyecto"}} <span class="caret"></span>
+    <i class="icon-briefcase ml-2 mr-3"></i>
+    {{ projectSelected?.Name || "Proyecto"}}
+    <span class="caret"></span>
+    <div class="spinner-border float-right" style="height: 18px; width: 18px" *ngIf="isLoading"></div>
   </button>
   <ul *dropdownMenu class="dropdown-menu" role="menu">
     <li role="menuitem" *ngFor="let project of projectList" (click)="onProjectSelectedChanged($event, project)">
