--- a/frontend/src/app/views/users/users.component.html
+++ b/frontend/src/app/views/users/users.component.html
@@ -24,7 +24,7 @@
         <td class="align-middle">{{user.Email}}</td>
         <td class="align-middle">{{user.Role}}</td>
         <td style="white-space: nowrap">
-          <button class="btn text-primary icon-note" data-toggle="modal" ></button>
+          <button class="btn text-primary icon-note" (click)="onEdit($event, user)"></button>
           <button class="btn text-primary icon-close" data-toggle="modal" (click)="onDeleteRequest($event, user)"></button>
         </td>
       </tr>
@@ -50,6 +50,26 @@
         <button type="button" class="btn btn-warning"(click)="onDeleteOk($event)">Confirmar
           <span class="spinner-border spinner-border-sm" role="status" aria-hidden="true" *ngIf="isDeleting"></span>
         </button>
+      </div>
+    </div>
+  </div>
+</div>
+
+<!-- Modal advertencia eliminar usuario -->
+<div bsModal #mogModal="bs-modal" class="modal fade" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+  <div class="modal-dialog modal-danger modal-sm" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h4 class="modal-title">Eliminar usuario</h4>
+        <button type="button" class="close" aria-label="Close" (click)="onMogCancel($event)">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body">
+        <p>No se puede borrar a mgonzalez738 !!</p>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-danger" (click)="onMogCancel($event)">Ok</button>
       </div>
     </div>
   </div>
