--- a/frontend/src/app/views/users/edit-user.component.html
+++ b/frontend/src/app/views/users/edit-user.component.html
@@ -1,6 +1,5 @@
 <div class="animated fadeIn">
-
-  <form class="mt-2" (submit)="OnOk(newUserForm)" #newUserForm="ngForm">
+  <form class="mt-1" #newUserForm="ngForm" (submit)="OnOk(newUserForm)">
 
     <div class="row">
       <!-- Primer columna -->
@@ -15,25 +14,28 @@
                   <div class="input-group-prepend">
                     <span class="input-group-text"><i class="icon-user"></i></span>
                   </div>
-                  <input type="text" id="username" name="username" class="form-control"  ngModel placeholder="Usuario" autocomplete="on" [ngClass]="{'is-invalid': usernameError }">
+                  <input type="text" class="form-control" name="username" [(ngModel)]="username" [ngClass]="{'is-invalid': usernameError }">
                 </div>
                 <div *ngIf="usernameError" class="text-danger mt-n3 mb-3"> {{ usernameErrorMessage }}</div>
                 <!-- Contraseña -->
-                <div class="input-group mb-3">
+                <button class="btn btn-outline-primary" *ngIf="!modifyPassword" (click)="onModifiyPassword($event)">
+                  Modificar Contraseña
+                </button>
+                <div class="input-group mb-3" *ngIf="modifyPassword">
                   <div class="input-group-prepend">
                     <span class="input-group-text"><i class="icon-lock"></i></span>
                   </div>
-                  <input type="password" class="form-control" name="password" ngModel placeholder="Contraseña" [ngClass]="{'is-invalid': passwordError }">
+                  <input type="password" class="form-control" name="password" ngModel placeholder="Nueva Contraseña" [ngClass]="{'is-invalid': passwordError }">
                 </div>
-                <div *ngIf="passwordError" class="text-danger mt-n3 mb-3"> {{ passwordErrorMessage }}</div>
+                <div *ngIf="passwordError && modifyPassword" class="text-danger mt-n3 mb-3" > {{ passwordErrorMessage }}</div>
                 <!-- Repetir Contraseña -->
-                <div class="input-group">
+                <div class="input-group" *ngIf="modifyPassword">
                   <div class="input-group-prepend">
                     <span class="input-group-text"><i class="icon-lock"></i></span>
                   </div>
                   <input type="password" class="form-control" name="passwordRepeat" ngModel placeholder="Repetir Contraseña" [ngClass]="{'is-invalid': passwordRepeatError }">
                 </div>
-                <div *ngIf="passwordRepeatError" class="text-danger mb-n1">{{ passwordRepeatErrorMessage }}</div>
+                <div *ngIf="passwordRepeatError && modifyPassword" class="text-danger mb-n1">{{ passwordRepeatErrorMessage }}</div>
               </div>
             </div>
           </div>
@@ -48,7 +50,7 @@
                   <div class="input-group-prepend">
                     <span class="input-group-text"><i class="icon-user"></i></span>
                   </div>
-                  <input type="text" class="form-control" name="firstname" ngModel placeholder="Nombre" autocomplete="firstname" [ngClass]="{'is-invalid': firstnameError }">
+                  <input type="text" class="form-control" name="firstname" [(ngModel)]="firstname" [ngClass]="{'is-invalid': firstnameError }">
                 </div>
                 <div *ngIf="firstnameError" class="text-danger mt-n3 mb-3">{{ firstnameErrorMessage }}</div>
                 <!-- Apellido -->
@@ -56,7 +58,7 @@
                   <div class="input-group-prepend">
                     <span class="input-group-text"><i class="icon-user"></i></span>
                   </div>
-                  <input type="text" class="form-control" name="lastname" ngModel placeholder="Apellido" autocomplete="lastname" [ngClass]="{'is-invalid': lastnameError }">
+                  <input type="text" class="form-control" name="lastname" [(ngModel)]="lastname" [ngClass]="{'is-invalid': lastnameError }">
                 </div>
                 <div *ngIf="lastnameError" class="text-danger mt-n3 mb-3">{{ lastnameErrorMessage }}</div>
                 <!-- Email -->
@@ -64,7 +66,7 @@
                   <div class="input-group-prepend">
                     <span class="input-group-text"><i class="fa fa-at"></i></span>
                   </div>
-                  <input type="text" class="form-control" name="email" ngModel placeholder="Email" autocomplete="email" [ngClass]="{'is-invalid': emailError }">
+                  <input type="text" class="form-control" name="email" [(ngModel)]="email" [ngClass]="{'is-invalid': emailError }">
                 </div>
                 <div *ngIf="emailError" class="text-danger mb-3">{{ emailErrorMessage }}</div>
               </div>
@@ -94,7 +96,7 @@
                 <!-- Proyectos -->
                 <p class="text-muted mt-3" *ngIf="roleSelected==='guest' || roleSelected==='user'">Proyectos:</p>
                 <div class="input-group" *ngIf="roleSelected==='guest' || roleSelected==='user'">
-                  <select class="form-control mt-n2" multiple name="projects" ngModel>
+                  <select class="form-control mt-n2" name="projects" [(ngModel)]="projectsSelected" multiple>
                     <option *ngFor="let project of projects" value={{project._id}}>{{project.Name}}</option>
                   </select>
                 </div>
@@ -104,10 +106,12 @@
         </div>
       </div>
     </div>
-
     <div class="row justify-content-left">
       <div class="col-sm-6 col-md-6">
         <div *ngIf="storeError" class="text-danger mt-n2 mb-3"> {{ storeErrorMessage }}</div>
+        <button class="btn btn-secondary mr-2" routerLink="/users">
+          Cancelar
+        </button>
         <button type="submit" class="btn btn-primary">
           <span class="spinner-border spinner-border-sm" role="status" aria-hidden="true" *ngIf="isLoading"></span>
           Aceptar
