--- a/frontend/src/app/views/users/users.component.html
+++ b/frontend/src/app/views/users/users.component.html
@@ -1,6 +1,6 @@
 <div class="animated fadeIn">
-  <div class="mb-4">
-    <button style="height: 40px; white-space: nowrap" type="button" class="btn btn-outline-primary" [routerLink]="['./newuser']">
+  <div class="mb-3">
+    <button style="height: 35px; white-space: nowrap" type="button" class="btn btn-outline-primary" [routerLink]="['./newuser']">
       <i class="icon-user-follow mr-1"></i>Nuevo
     </button>
   </div>
@@ -60,13 +60,13 @@
   <div class="modal-dialog modal-danger modal-sm" role="document">
     <div class="modal-content">
       <div class="modal-header">
-        <h4 class="modal-title">Eliminar usuario</h4>
+        <h4 class="modal-title">Usuario mgonzalez738</h4>
         <button type="button" class="close" aria-label="Close" (click)="onMogCancel($event)">
           <span aria-hidden="true">&times;</span>
         </button>
       </div>
       <div class="modal-body">
-        <p>No se puede borrar a mgonzalez738 !!</p>
+        <p>No se puede editar ni borrar !!</p>
       </div>
       <div class="modal-footer">
         <button type="button" class="btn btn-danger" (click)="onMogCancel($event)">Ok</button>
